// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots GridItem should render a summary grid item with a neutral diff 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <li
      className="gridSummaryItem"
      style={
        Object {
          "width": "25%",
        }
      }
    >
      <span
        className="gridSummaryItemLabel"
      >
        <span
          data-tip={null}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Tweets
          </span>
        </span>
      </span>
      <div
        className="gridSummaryItemValueWrapper"
      >
        <div
          className="gridSummaryItemValueContainer"
        >
          <span
            className="gridSummaryItemValue"
          >
            <span
              style={
                Object {
                  "color": "#323b43",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "2rem",
                  "fontWeight": 600,
                }
              }
            >
              <span>
                0
              </span>
            </span>
          </span>
        </div>
        <div>
          <span
            className="gridSummaryItemIcon"
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#8D969E",
                  "height": "1rem",
                  "width": "1rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="#8D969E"
              >
                <path
                  d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                  transform="translate(8.118778, 7.993958) scale(1, -1) rotate(90.000000) translate(-8.118778, -7.993958) "
                />
              </g>
            </svg>
          </span>
          <div
            className="gridSummaryItemDiffContainer"
          >
            <span
              className="gridSummaryItemDiff"
            >
              <span
                style={
                  Object {
                    "color": "#8D969E",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "1.25rem",
                  }
                }
              >
                <span>
                  0
                </span>
                %
              </span>
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Snapshots GridItem should render a summary grid item with negative diff 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <li
      className="gridSummaryItem"
      style={
        Object {
          "width": "25%",
        }
      }
    >
      <span
        className="gridSummaryItemLabel"
      >
        <span
          data-tip={null}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Tweets
          </span>
        </span>
      </span>
      <div
        className="gridSummaryItemValueWrapper"
      >
        <div
          className="gridSummaryItemValueContainer"
        >
          <span
            className="gridSummaryItemValue"
          >
            <span
              style={
                Object {
                  "color": "#323b43",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "2rem",
                  "fontWeight": 600,
                }
              }
            >
              <span>
                10
              </span>
            </span>
          </span>
        </div>
        <div>
          <span
            className="gridSummaryItemIcon"
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#FF1E1E",
                  "height": "1rem",
                  "width": "1rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="#FF1E1E"
              >
                <path
                  d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                  transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                />
              </g>
            </svg>
          </span>
          <div
            className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
          >
            <span
              className="gridSummaryItemDiff"
            >
              <span
                style={
                  Object {
                    "color": "#FF1E1E",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "1.25rem",
                  }
                }
              >
                <span>
                  60
                </span>
                %
              </span>
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Snapshots GridItem should render a summary grid item with positive diff 1`] = `
<span>
  <ul
    style={
      Object {
        "borderLeft": "solid 1px #ced7df",
        "borderRadius": "2px",
        "borderTop": "solid 1px #ced7df",
        "display": "flex",
        "flexWrap": "wrap",
        "margin": "0 auto",
        "padding": "0",
      }
    }
  >
    <li
      className="gridSummaryItem"
      style={
        Object {
          "width": "25%",
        }
      }
    >
      <span
        className="gridSummaryItemLabel"
      >
        <span
          data-tip={null}
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Tweets
          </span>
        </span>
      </span>
      <div
        className="gridSummaryItemValueWrapper"
      >
        <div
          className="gridSummaryItemValueContainer"
        >
          <span
            className="gridSummaryItemValue"
          >
            <span
              style={
                Object {
                  "color": "#323b43",
                  "fontFamily": "\\"Open Sans\\", sans-serif",
                  "fontSize": "2rem",
                  "fontWeight": 600,
                }
              }
            >
              <span>
                150
              </span>
            </span>
          </span>
        </div>
        <div>
          <span
            className="gridSummaryItemIcon"
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#2FD566",
                  "height": "1rem",
                  "width": "1rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="#2FD566"
              >
                <path
                  d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                />
              </g>
            </svg>
          </span>
          <div
            className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerPositive"
          >
            <span
              className="gridSummaryItemDiff"
            >
              <span
                style={
                  Object {
                    "color": "#2FD566",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "1.25rem",
                  }
                }
              >
                <span>
                  50
                </span>
                %
              </span>
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</span>
`;

exports[`Snapshots SummaryTable should render a "no data" state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "marginLeft": "2rem",
        }
      }
    >
      <h2>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          Tweet performance 
          for the selected 7 days compared to the previous period
        </span>
      </h2>
      <div
        style={
          Object {
            "margin": "1rem 0 1.5rem",
            "minHeight": "12rem",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(255, 255, 255, 1)",
              "bottom": 0,
              "display": "flex",
              "justifyContent": "center",
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "textAlign": "center",
              "top": 0,
              "transition": "opacity 350ms ease-in-out",
              "zIndex": 2,
            }
          }
        >
          <div
            style={
              Object {
                "background": "white",
                "border": "solid 1px #ced7df",
                "borderRadius": "2px",
                "boxSizing": "border-box",
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": 30,
                "marginRight": 30,
              }
            }
          >
            <h1>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "1.25rem",
                    "fontWeight": 400,
                  }
                }
              >
                We couldn't find any analytics for this date range.
              </span>
            </h1>
            <p
              style={
                Object {
                  "marginBottom": 30,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Try selecting a longer date range, or share something and check back tomorrow :)
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots SummaryTable should render a loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "marginLeft": "2rem",
        }
      }
    >
      <h2>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          Performance 
          for the selected 7 days compared to the previous period
        </span>
      </h2>
      <div
        style={
          Object {
            "margin": "1rem 0 1.5rem",
            "minHeight": "12rem",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(255,255,255,.95)",
              "border": "solid 1px #ced7df",
              "bottom": 0,
              "display": "flex",
              "justifyContent": "center",
              "left": 0,
              "maxHeight": "none",
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "textAlign": "center",
              "top": 0,
              "transition": "opacity 350ms ease-in-out",
              "zIndex": 2,
            }
          }
        >
          <div
            style={
              Object {
                "background": "white",
                "borderRadius": "2px",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Open Sans\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Summary loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots SummaryTable should render the summary table 1`] = `
<span>
  <div
    style={
      Object {
        "width": "750px",
      }
    }
  >
    <div
      style={
        Object {
          "marginLeft": "2rem",
        }
      }
    >
      <h2>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Open Sans\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          Tweet performance 
          for the selected 7 days compared to the previous period
        </span>
      </h2>
      <div
        style={
          Object {
            "margin": "1rem 0 1.5rem",
            "minHeight": "12rem",
            "position": "relative",
          }
        }
      >
        <ul
          style={
            Object {
              "borderLeft": "solid 1px #ced7df",
              "borderRadius": "2px",
              "borderTop": "solid 1px #ced7df",
              "display": "flex",
              "flexWrap": "wrap",
              "margin": "0 auto",
              "padding": "0",
            }
          }
        >
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Tweets
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      150
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#2FD566",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#2FD566"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerPositive"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#2FD566",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        25
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Retweets
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      901
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#FF1E1E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#FF1E1E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#FF1E1E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        39
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Clicks
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      1,010
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#FF1E1E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#FF1E1E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#FF1E1E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        55
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Impressions
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      963.4k
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#FF1E1E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#FF1E1E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#FF1E1E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        26
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  New Followers
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      0
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#8D969E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#8D969E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) rotate(90.000000) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#8D969E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        0
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Engagements
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      28.8k
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#FF1E1E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#FF1E1E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#FF1E1E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        33
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Likes
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      2,313
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#FF1E1E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#FF1E1E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#FF1E1E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        28
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="gridSummaryItem"
            style={
              Object {
                "width": "25%",
              }
            }
          >
            <span
              className="gridSummaryItemLabel"
            >
              <span
                data-tip={null}
              >
                <span
                  style={
                    Object {
                      "color": "#59626a",
                      "fontFamily": "\\"Open Sans\\", sans-serif",
                      "fontSize": "0.8rem",
                      "fontWeight": 400,
                    }
                  }
                >
                  Replies
                </span>
              </span>
            </span>
            <div
              className="gridSummaryItemValueWrapper"
            >
              <div
                className="gridSummaryItemValueContainer"
              >
                <span
                  className="gridSummaryItemValue"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Open Sans\\", sans-serif",
                        "fontSize": "2rem",
                        "fontWeight": 600,
                      }
                    }
                  >
                    <span>
                      658
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <span
                  className="gridSummaryItemIcon"
                >
                  <svg
                    height="100%"
                    style={
                      Object {
                        "fill": "#FF1E1E",
                        "height": "1rem",
                        "width": "1rem",
                      }
                    }
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      className="#FF1E1E"
                    >
                      <path
                        d="M9.14049638,4.2860102 L12.0353395,6.89310549 C12.4537988,7.26996987 13.0967448,7.23809282 13.4772842,6.81536904 C13.855189,6.39557201 13.8172589,5.74519856 13.4038537,5.37288597 L8.83967284,1.26238536 C8.63426816,1.07739793 8.37477499,0.990893877 8.11877778,1.0007568 C7.86278056,0.990893877 7.60328739,1.07739793 7.3978827,1.26238536 L2.83370181,5.37288597 C2.42029668,5.74519856 2.38236657,6.39557201 2.76027134,6.81536904 C3.14081078,7.23809282 3.78375672,7.26996987 4.20221602,6.89310549 L7.09528397,4.28760894 L7.09528397,13.9628717 C7.09528397,14.5341657 7.55312036,14.9879169 8.11789018,14.9879169 C8.68659746,14.9879169 9.14049638,14.5289885 9.14049638,13.9628717 L9.14049638,4.2860102 Z"
                        transform="translate(8.118778, 7.993958) scale(1, -1) translate(-8.118778, -7.993958) "
                      />
                    </g>
                  </svg>
                </span>
                <div
                  className="gridSummaryItemDiffContainer gridSummaryItemDiffContainerNegative"
                >
                  <span
                    className="gridSummaryItemDiff"
                  >
                    <span
                      style={
                        Object {
                          "color": "#FF1E1E",
                          "fontFamily": "\\"Open Sans\\", sans-serif",
                          "fontSize": "1.25rem",
                        }
                      }
                    >
                      <span>
                        9
                      </span>
                      %
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;
